# machine-learning

./: .gitignore  LICENSE  README.md  machine-learning.cabal
example/: Example.hs  GlobalWarming.hs  Parens.hs  Sentiment.hs
models/: parens.bm
src/Data/: ML.hs
src/Data/ML/: AffineMap.hs  Cata.hs  Cost.hs  Domain.hs  Driver.hs  Folds.hs  Functions.hs  Index.hs  Linear.hs  LinearMap.hs  Matrix.hs  Model.hs  Monoid.hs  MonoidHom.hs  Repl.hs  Scalar.hs  Search.hs  Softmax.hs  TH.hs
src/Data/ML/Internal/: Compose.hs  Domain.hs  Driver.hs  Product.hs  Repl.hs  Scalar.hs  TH.hs
src/Data/ML/Model/: Arrow.hs  Dynamic.hs
src/Data/ML/Monoid/: MatrixMult.hs  MatrixProd.hs
src/Data/ML/Repl/: Commands.hs
src/Data/Vector/: Parallel.hs
