name:                machine-learning
version:             0.1.0.0
synopsis:            Composable machine learning algorithms.
license:             MIT
license-file:        LICENSE
author:              Paweł Nowak
maintainer:          pawel834@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.ML
                       Data.ML.Domain
                       Data.ML.Model
                       Data.ML.Scalar
                       Data.ML.Softmax
                       Data.ML.Matrix
                       Data.ML.MonoidHom
                       Data.ML.LinearMap
                       Data.ML.AffineMap
                       Data.ML.Cata
                       Data.ML.Cost
                       Data.ML.Search
                       Data.ML.Internal.Compose
                       Data.ML.Internal.Product
                       Data.ML.Internal.Domain
                       Data.ML.Internal.Scalar
                       Data.ML.Internal.TH
  default-extensions:  FlexibleContexts, FlexibleInstances, ScopedTypeVariables,
                       TypeOperators
  build-depends:       base <5, linear >= 1.18 && <2, containers >= 0.5 && <1,
                       ad == 4.*, keys == 3.*, reflection == 1.*, bifunctors == 4.*,
                       semigroups == 0.*, transformers == 0.*,
                       semigroupoids == 4.*, bytes >= 0.11 && <1,
                       template-haskell, random-fu, haskeline
  hs-source-dirs:      src
  default-language:    Haskell2010

executable example
  main-is:             Example.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base <5, machine-learning, ad == 4.*, random-fu,
                       bifunctors == 4.*, transformers == 0.*, haskeline