name:                machine-learning
version:             0.1.0.0
synopsis:            Composable machine learning algorithms.
license:             MIT
license-file:        LICENSE
author:              Paweł Nowak
maintainer:          pawel834@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.ML
                       Data.ML.Model
                       Data.ML.Scalar
                       Data.ML.Softmax
                       Data.ML.Matrix
                       Data.ML.MonoidHom
                       Data.ML.LinearMap
                       Data.ML.AffineMap
                       Data.ML.Cata
                       Data.ML.Cost
                       Data.ML.Index
                       Data.ML.Search
                       Data.ML.Driver
                       Data.ML.Folds
                       Data.ML.Repl
                       Data.Vector.Parallel
                       Data.ML.Internal.Compose
                       Data.ML.Internal.Product
                       Data.ML.Internal.Scalar
                       Data.ML.Internal.Driver
                       Data.ML.Internal.Repl
                       Data.ML.Internal.TH
  default-extensions:  FlexibleContexts, FlexibleInstances, ScopedTypeVariables,
                       TypeOperators, AutoDeriveTypeable, PatternSynonyms
  build-depends:       base <5,
                       linear >= 1.18 && <2,
                       ad == 4.*,
                       keys == 3.*,
                       vector >= 0.10,
                       reflection == 1.*,
                       semigroups == 0.*,
                       transformers == 0.*,
                       transformers-base >= 0.4,
                       mtl == 2.*,
                       exceptions >= 0.8,
                       bytes >= 0.11 && <1,
                       bytestring >= 0.10,
                       hint >= 0.4.2.2,
                       haskeline >= 0.7,
                       random-fu >= 0.2,
                       rvar >= 0.2,
                       criterion == 1.*,
                       parallel == 3.*,
                       template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -W -O2
  ghc-prof-options:    -fprof-auto

executable example
  main-is:             Example.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base <5, machine-learning, ad == 4.*, random-fu,
                       transformers == 0.*, vector,
                       total-maps >= 1.0.0.1
  ghc-options:         -W -O2 -threaded -rtsopts "-with-rtsopts=-A512m -n4m -N"
  ghc-prof-options:    -fprof-auto

executable parens
  main-is:             Parens.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base <5, machine-learning, ad == 4.*, random-fu,
                       transformers == 0.*, vector, bytes,
                       total-maps >= 1.0.0.1
  ghc-options:         -W -O2 -threaded -rtsopts "-with-rtsopts=-A512m -n4m -N"
  ghc-prof-options:    -fprof-auto

executable sentiment
  main-is:             Sentiment.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base <5, machine-learning, ad == 4.*, random-fu,
                       transformers == 0.*, vector, bytes, containers,
                       total-maps >= 1.0.0.1, cassava >= 0.4, text,
                       bytestring, reflection, attoparsec
  ghc-options:         -W -O2 -threaded -rtsopts "-with-rtsopts=-A512m -n4m -N"
  ghc-prof-options:    -fprof-auto

executable sentiment2
  main-is:             Sentiment2.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base <5, machine-learning, ad == 4.*, random-fu,
                       transformers == 0.*, vector, bytes, containers,
                       total-maps >= 1.0.0.1, cassava >= 0.4, text,
                       bytestring, reflection, attoparsec
  ghc-options:         -W -O2 -threaded -rtsopts "-with-rtsopts=-A512m -n4m -N"
  ghc-prof-options:    -fprof-auto
